--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,8 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
+<link rel="stylesheet" href="/assets/site.css">
+<script defer src="/assets/graph.js"></script>
+
 <!-- Setup Google Analytics -->
 {% include head-custom-google-analytics.html %}
 
