--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,26 @@
 ---
+# Front matter tells Jekyll to process this file
 ---
 
-@import "{{jekyll-theme-minimal}}";
+@import "{{ site.theme }}";
+
+/* your custom overrides below */
+.hero {
+  position: relative;
+  height: 45vh;
+  min-height: 320px;
+}
+
+#mas-canvas {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.overlay {
+  position: relative;
+  z-index: 1;
+  color: #111;
+  padding: 2rem;
+}
