--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,7 +1,7 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
-<link rel="stylesheet" href="/assets/css/style.css">
-<script defer src="/assets/graph.js"></script>
+<link rel="stylesheet" href="/assets/css/style.scss">
+<script defer src="/assets/js/graph.js"></script>
 
 
 <!-- Setup Google Analytics -->
