--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,7 +1,8 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
-<link rel="stylesheet" href="/assets/css/style.scss">
+<link rel="stylesheet" href="/assets/css/site.css">
 <script defer src="/assets/js/graph.js"></script>
+
 
 
 <!-- Setup Google Analytics -->
