--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,6 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
-<link rel="stylesheet" href="/assets/css/site.css">
+<link rel="stylesheet" href="/assets/css/site.scss">
 <script defer src="/assets/js/graph.js"></script>
 
 
