added profile animation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <div class="sidebar-hero">
+          <canvas class="mas-canvas" id="mas-sidebar"></canvas>
+        </div>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
