--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
     {% include head-custom.html %}
   </head>
   <body>
+    <div class="left-rail">
+      <canvas class="mas-canvas" id="mas-rail"></canvas>
+    </div>
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
@@ -39,11 +42,6 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
-
-        <div class="sidebar-hero">
-          <canvas class="mas-canvas" id="mas-canvas"></canvas>
-        </div>
-        
       </header>
       <section>
 
@@ -58,5 +56,6 @@
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/graph.js" | relative_url }}"></script>
   </body>
 </html>
