added zip button and profile button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
           <!-- Action Buttons -->
           {% if site.show_downloads %}
           <div class="action-buttons">
-            <a href="{{ site.github.repository_url }}" class="btn btn-github">GitHub prof</a>
-            <a href="{{ site.github.zip_url }}" class="btn btn-download">zip CV</a>
+            <a href="{{ site.github.owner_url }}" class="btn btn-github">GitHub Profile</a>
+            <a href="{{ site.github.zip_url }}" class="btn btn-download">Download CV</a>
           </div>
           {% endif %}
           
