--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,7 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <!-- head-custom.html -->
+<link rel="stylesheet" href="assets/css/style.scss">
 <script defer src="/assets/js/graph.js"></script>
 
 
