--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,5 +62,6 @@
     </div>
     
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/portfolio.js" | relative_url }}"></script>
   </body>
 </html>
