added some betterpage management

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -2,6 +2,7 @@
 
 <!-- head-custom.html -->
 <script defer src="/assets/js/graph.js"></script>
+<script defer src="/assets/js/portfolio.js"></script>
 
 
 <!-- Setup Google Analytics -->
