--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -580,12 +580,23 @@ body {
   display: inline-block;
   max-width: 420px;
   box-shadow: 0 6px 18px rgba(0,0,0,0.25);
-}
-
-.modal-description figure img {
-  display: block;
-  width: 100%;
-  height: auto;
+  
+  /* Respect width and height set in style attribute */
+  &[style*="width"] {
+    max-width: none;
+  }
+  
+  &[style*="height"] {
+    height: auto; /* Will be overridden by inline style if set */
+  }
+  
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px 12px 0 0;
+    object-fit: contain; /* Preserve aspect ratio, fit within container */
+  }
 }
 
 .modal-description figure figcaption {
@@ -594,6 +605,7 @@ body {
   color: #8b949e;
   font-style: italic;
 }
+
 
 .project-figure--left {
   float: left;
